deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: streamlit-app
  name: streamlit-app
  namespace: streamlit-app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  selector:
    app: streamlit-app
  type: LoadBalancer
